--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Some JMeter Samplers ... Just JUnit4 atm ...
 
 Note: you will have to build the jmeter maven deps yourself atm, will add a script for this when I find the time ...
-See maven-jmeter dir auf some example poms to use on JMeter
+See maven-jmeter dir for some example poms to use on JMeter.
 
 Read the fine source for more doc ...
 
